Match KB nav to homepage, add KB to Research dropdown

--- a/index.html
+++ b/index.html
@@ -3835,6 +3835,7 @@
                         <a href="/colony-research.html">🧠 Colony Insights</a>
                         <a href="/ouroboros/colony-report-2026-02-09.html">🐜 Colony Report</a>
                         <a href="/ouroboros/research-paper.html">📄 Paper</a>
+                        <a href="/kb.html">📚 Knowledge Base</a>
                     </div>
                 </li>
                 <li class="nav-dropdown">
