Consolidate nav: Trends+KB→Tools, simplify Research dropdown

--- a/index.html
+++ b/index.html
@@ -3819,23 +3819,18 @@
                 <li><a href="#testimonials" data-nav>Reviews</a></li>
                 <li><a href="blog.html" data-nav>Blog</a></li>
                 <li class="nav-dropdown">
-                    <a href="#" data-nav>Trends</a>
+                    <a href="#" data-nav>Tools</a>
                     <div class="dropdown-menu">
-                        <a href="/youtube-trends">📊 YouTube Trends</a>
-                        <a href="/intake">⚖️ Case Trends</a>
                         <a href="/ri-report.html">🏠 RI Real Estate</a>
-                        <a href="/ri-heatmap.html">🗺️ RI Heatmap</a>
+                        <a href="/youtube-trends">📊 YouTube Trends</a>
+                        <a href="/kb.html">📚 Knowledge Base</a>
                     </div>
                 </li>
                 <li class="nav-dropdown">
                     <a href="#research" data-nav>Research</a>
                     <div class="dropdown-menu">
-                        <a href="#research">🔬 Overview</a>
-                        <a href="/ouroboros/">📊 Live System</a>
-                        <a href="/colony-research.html">🧠 Colony Insights</a>
-                        <a href="/ouroboros/colony-report-2026-02-09.html">🐜 Colony Report</a>
-                        <a href="/ouroboros/research-paper.html">📄 Paper</a>
-                        <a href="/kb.html">📚 Knowledge Base</a>
+                        <a href="/ouroboros/">🐜 Ouroboros Colony</a>
+                        <a href="/ouroboros/research-paper.html">📄 Research Paper</a>
                     </div>
                 </li>
                 <li class="nav-dropdown">
