--- a/kb.html
+++ b/kb.html
@@ -397,19 +397,18 @@
         <li><a href="/#products">Products</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li class="nav-dropdown">
-          <a href="#">Trends</a>
+          <a href="#">Tools</a>
           <div class="dropdown-menu">
-            <a href="/youtube-trends">📊 YouTube Trends</a>
             <a href="/ri-report.html">🏠 RI Real Estate</a>
+            <a href="/youtube-trends">📊 YouTube Trends</a>
+            <a href="/kb.html" class="active">📚 Knowledge Base</a>
           </div>
         </li>
         <li class="nav-dropdown">
           <a href="#">Research</a>
           <div class="dropdown-menu">
-            <a href="/ouroboros/">📊 Live System</a>
-            <a href="/colony-research.html">🧠 Colony Insights</a>
-            <a href="/ouroboros/research-paper.html">📄 Paper</a>
-            <a href="/kb.html" class="active">📚 Knowledge Base</a>
+            <a href="/ouroboros/">🐜 Ouroboros Colony</a>
+            <a href="/ouroboros/research-paper.html">📄 Research Paper</a>
           </div>
         </li>
         <li><a href="/#contact" class="nav-cta">Contact</a></li>
