Move AI agent promo to top of page

--- a/ri-report.html
+++ b/ri-report.html
@@ -277,6 +277,18 @@
  <p class="subtitle" id="heroSubtitle">207,000+ Properties • 27 Towns • Updated Daily</p>
  </div>
  
+ <!-- AI Agent Promo Tile -->
+ <div style="margin-bottom:1.5rem;background:linear-gradient(135deg, rgba(16,185,129,0.15), rgba(99,102,241,0.15));border:1px solid rgba(16,185,129,0.3);border-radius:12px;padding:1rem 1.5rem;display:flex;flex-wrap:wrap;align-items:center;justify-content:space-between;gap:1rem">
+ <div style="display:flex;align-items:center;gap:0.75rem;flex:1;min-width:250px">
+ <span style="font-size:1.3rem">🤖</span>
+ <div>
+ <span style="color:#f8fafc;font-weight:600;font-size:0.95rem">AI Agents for Real Estate</span>
+ <span style="color:#94a3b8;font-size:0.85rem;margin-left:0.5rem">— Client texts, bookings, showings, calendar & reminders</span>
+ </div>
+ </div>
+ <a href="https://aibridges.org/#contact" style="background:linear-gradient(135deg,#10b981,#6366f1);color:white;padding:0.5rem 1rem;border-radius:8px;text-decoration:none;font-weight:600;font-size:0.85rem;white-space:nowrap;box-shadow:0 2px 10px rgba(16,185,129,0.3)">Get a Demo →</a>
+ </div>
+ 
  <!-- TOOL NAVIGATION CARDS -->
  <!-- Mobile Menu (hidden on desktop) -->
  <div class="nav-menu-mobile">
@@ -4875,26 +4887,6 @@ ${compResults.map(p => `<tr><td><a href="${p.url}" target="_blank">${p.address}<
  <p style="color:#94a3b8;font-size:0.9rem">Yes! Use the SQL tool or export buttons on any table. For bulk API access, <a href="https://aibridges.org/#contact" style="color:#10b981">contact us</a>.</p>
  </div>
  </div>
- </div>
- 
- <!-- AI Agent Promo Tile -->
- <div style="margin-top:2rem;background:linear-gradient(135deg, rgba(99,102,241,0.15), rgba(16,185,129,0.15));border:1px solid rgba(99,102,241,0.3);border-radius:16px;padding:1.5rem 2rem;display:flex;flex-wrap:wrap;align-items:center;justify-content:space-between;gap:1rem">
- <div style="flex:1;min-width:280px">
- <div style="display:flex;align-items:center;gap:0.75rem;margin-bottom:0.5rem">
- <span style="font-size:1.5rem">🤖</span>
- <h3 style="color:#f8fafc;font-size:1.1rem;font-weight:700;margin:0">AI Agents for Real Estate</h3>
- </div>
- <p style="color:#cbd5e1;font-size:0.9rem;margin:0;line-height:1.5">
- We build intelligent AI assistants that handle your real estate business 24/7 — 
- <span style="color:#10b981;font-weight:600">client texts</span>, 
- <span style="color:#10b981;font-weight:600">booking showings</span>, 
- <span style="color:#10b981;font-weight:600">calendar appointments</span>, 
- <span style="color:#10b981;font-weight:600">reminders</span>, and more.
- </p>
- </div>
- <a href="https://aibridges.org/#contact" style="background:linear-gradient(135deg,#6366f1,#10b981);color:white;padding:0.75rem 1.5rem;border-radius:10px;text-decoration:none;font-weight:600;font-size:0.95rem;white-space:nowrap;box-shadow:0 4px 15px rgba(99,102,241,0.4);transition:all 0.2s" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 6px 20px rgba(99,102,241,0.5)'" onmouseout="this.style.transform='none';this.style.boxShadow='0 4px 15px rgba(99,102,241,0.4)'">
- Get a Demo →
- </a>
  </div>
  
  <p style="color:#64748b;font-size:0.8rem;margin-top:1.5rem;text-align:center">
