--- a/ri-report.html
+++ b/ri-report.html
@@ -282,7 +282,7 @@
  <div style="display:flex;align-items:center;gap:0.75rem;flex:1;min-width:250px">
  <span style="font-size:1.3rem">🤖</span>
  <div>
- <span style="color:#f8fafc;font-weight:600;font-size:0.95rem">AI Agents for Real Estate</span>
+ <span style="color:#f8fafc;font-weight:600;font-size:0.95rem">Intelligent AI Assistants Who Actually Work!</span>
  <span style="color:#94a3b8;font-size:0.85rem;margin-left:0.5rem">— Client texts, bookings, showings, calendar & reminders</span>
  </div>
  </div>
