--- a/ri-report.html
+++ b/ri-report.html
@@ -283,7 +283,7 @@
  <span style="font-size:1.3rem">🤖</span>
  <div>
  <span style="color:#f8fafc;font-weight:600;font-size:0.95rem">Intelligent AI Assistants Who Actually Work!</span>
- <span style="color:#94a3b8;font-size:0.85rem;margin-left:0.5rem">— Client texts, bookings, showings, calendar & reminders</span>
+ <span style="color:#94a3b8;font-size:0.85rem;margin-left:0.5rem">— Cold outreach, emails, texts, bookings, showings & more</span>
  </div>
  </div>
  <a href="https://aibridges.org/#contact" style="background:linear-gradient(135deg,#10b981,#6366f1);color:white;padding:0.5rem 1rem;border-radius:8px;text-decoration:none;font-weight:600;font-size:0.85rem;white-space:nowrap;box-shadow:0 2px 10px rgba(16,185,129,0.3)">Get a Demo →</a>
