--- a/ri-report.html
+++ b/ri-report.html
@@ -278,15 +278,20 @@
  </div>
  
  <!-- AI Agent Promo Tile -->
- <div style="margin-bottom:1.5rem;background:linear-gradient(135deg, rgba(16,185,129,0.15), rgba(99,102,241,0.15));border:1px solid rgba(16,185,129,0.3);border-radius:12px;padding:1rem 1.5rem;display:flex;flex-wrap:wrap;align-items:center;justify-content:space-between;gap:1rem">
- <div style="display:flex;align-items:center;gap:0.75rem;flex:1;min-width:250px">
+ <div style="margin-bottom:1.5rem;background:linear-gradient(135deg, rgba(16,185,129,0.15), rgba(99,102,241,0.15));border:1px solid rgba(16,185,129,0.3);border-radius:12px;padding:1.25rem 1.5rem;display:flex;flex-wrap:wrap;align-items:center;justify-content:space-between;gap:1rem">
+ <div style="flex:1;min-width:280px">
+ <div style="display:flex;align-items:center;gap:0.75rem;margin-bottom:0.5rem">
  <span style="font-size:1.3rem">🤖</span>
- <div>
- <span style="color:#f8fafc;font-weight:600;font-size:0.95rem">Intelligent AI Assistants Who Actually Work!</span>
- <span style="color:#94a3b8;font-size:0.85rem;margin-left:0.5rem">— Cold outreach, emails, texts, bookings, showings & more</span>
+ <span style="color:#f8fafc;font-weight:700;font-size:1rem">Intelligent AI Assistants Who Actually Work!</span>
+ </div>
+ <div style="color:#94a3b8;font-size:0.85rem;line-height:1.6">
+ <span style="color:#10b981">Cold outreach</span> via email & text • 
+ <span style="color:#10b981">Client scheduling</span> & management • 
+ <span style="color:#10b981">Email & text monitoring</span> • 
+ <span style="color:#10b981">Comps research</span> teams & more!
  </div>
  </div>
- <a href="https://aibridges.org/#contact" style="background:linear-gradient(135deg,#10b981,#6366f1);color:white;padding:0.5rem 1rem;border-radius:8px;text-decoration:none;font-weight:600;font-size:0.85rem;white-space:nowrap;box-shadow:0 2px 10px rgba(16,185,129,0.3)">Get a Demo →</a>
+ <a href="https://aibridges.org/#contact" style="background:linear-gradient(135deg,#10b981,#6366f1);color:white;padding:0.6rem 1.25rem;border-radius:8px;text-decoration:none;font-weight:600;font-size:0.9rem;white-space:nowrap;box-shadow:0 2px 10px rgba(16,185,129,0.3)">Get a Demo →</a>
  </div>
  
  <!-- TOOL NAVIGATION CARDS -->
