Fix hero subtitle: show actual MLS count (11K not 200K)

--- a/ri-report.html
+++ b/ri-report.html
@@ -282,7 +282,7 @@
  <!-- HERO / HOMEPAGE -->
  <div class="hero" style="padding:2rem 2rem 1.5rem">
  <h1>Rhode Island Real Estate Hub</h1>
- <p class="subtitle" id="heroSubtitle">207,000+ Properties • 27 Towns • Updated Daily</p>
+ <p class="subtitle" id="heroSubtitle">11,000+ MLS Listings • 27 Towns • Updated Daily</p>
  </div>
  
  <!-- AI Agent Promo Tile -->
@@ -1213,7 +1213,7 @@ function loadMainData() {
   document.getElementById('statSold').textContent = (s.soldCount / 1000).toFixed(0) + 'K+';
   document.getElementById('statMedian').textContent = '$' + Math.round(s.medianPrice / 1000) + 'K';
   document.getElementById('statTowns').textContent = s.citiesCovered;
-  document.getElementById('heroSubtitle').textContent = (s.total / 1000).toFixed(0) + ',000+ Properties • ' + s.citiesCovered + ' Towns • Updated Daily';
+  document.getElementById('heroSubtitle').textContent = rawData.properties.length.toLocaleString() + ' MLS Listings • ' + s.citiesCovered + ' Towns • Updated Daily';
   
   // Initialize everything now that data is loaded
   console.log('Data loaded, initializing...', rawData.properties.length, 'properties');
