Instant stats: hardcode values, no loading wait
- Stats show immediately: 36K+, 680, 35K+, $472K, 77
- Fix MLS count in About section: 36K not 11K
- Page now looks complete instantly on mobile

--- a/ri-report.html
+++ b/ri-report.html
@@ -359,13 +359,13 @@
  </a>
  </div>
 
- <!-- QUICK STATS BAR -->
+ <!-- QUICK STATS BAR - hardcoded for instant load -->
  <div id="market-stats" style="display:flex;flex-wrap:wrap;justify-content:center;gap:2rem;padding:1rem 2rem;background:rgba(99,102,241,0.1);border-radius:12px;margin-bottom:2rem;border:1px solid rgba(99,102,241,0.2)">
-        <div style="text-align:center"><span id="statTotal" style="color:#f8fafc;font-size:1.5rem;font-weight:700">...</span><br><span style="color:#94a3b8;font-size:0.75rem">PROPERTIES</span></div>
-        <div style="text-align:center"><span id="statActive" style="color:#10b981;font-size:1.5rem;font-weight:700">...</span><br><span style="color:#94a3b8;font-size:0.75rem">FOR SALE NOW</span></div>
-        <div style="text-align:center"><span id="statSold" style="color:#f8fafc;font-size:1.5rem;font-weight:700">...</span><br><span style="color:#94a3b8;font-size:0.75rem">SOLD (2 YRS)</span></div>
-        <div style="text-align:center"><span id="statMedian" style="color:#f8fafc;font-size:1.5rem;font-weight:700">...</span><br><span style="color:#94a3b8;font-size:0.75rem">MEDIAN PRICE</span></div>
-        <div style="text-align:center"><span id="statTowns" style="color:#f8fafc;font-size:1.5rem;font-weight:700">...</span><br><span style="color:#94a3b8;font-size:0.75rem">TOWNS</span></div>
+        <div style="text-align:center"><span id="statTotal" style="color:#f8fafc;font-size:1.5rem;font-weight:700">36K+</span><br><span style="color:#94a3b8;font-size:0.75rem">PROPERTIES</span></div>
+        <div style="text-align:center"><span id="statActive" style="color:#10b981;font-size:1.5rem;font-weight:700">680</span><br><span style="color:#94a3b8;font-size:0.75rem">FOR SALE NOW</span></div>
+        <div style="text-align:center"><span id="statSold" style="color:#f8fafc;font-size:1.5rem;font-weight:700">35K+</span><br><span style="color:#94a3b8;font-size:0.75rem">SOLD (2 YRS)</span></div>
+        <div style="text-align:center"><span id="statMedian" style="color:#f8fafc;font-size:1.5rem;font-weight:700">$472K</span><br><span style="color:#94a3b8;font-size:0.75rem">MEDIAN PRICE</span></div>
+        <div style="text-align:center"><span id="statTowns" style="color:#f8fafc;font-size:1.5rem;font-weight:700">77</span><br><span style="color:#94a3b8;font-size:0.75rem">TOWNS</span></div>
     </div>
 
     <!-- Hero Image Section -->
@@ -4887,8 +4887,8 @@ ${compResults.map(p => `<tr><td><a href="${p.url}" target="_blank">${p.address}<
  <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:1.5rem;margin-bottom:2rem">
  <div style="background:rgba(236,72,153,0.1);padding:1.5rem;border-radius:12px;border-left:4px solid #00E1E6">
  <h3 style="color:#6366f1;margin-bottom:0.5rem;display:flex;align-items:center;gap:0.5rem"> MLS Sales Data <span style="background:#00E1E6;color:white;font-size:0.7rem;padding:2px 8px;border-radius:10px">COMPS</span></h3>
- <div style="font-size:2rem;font-weight:800;color:#00E1E6;margin-bottom:0.5rem">11,000+</div>
- <p style="color:#94a3b8;font-size:0.9rem;margin-bottom:0.75rem"><strong>Real sale prices</strong> — active listings + sold properties (past 2 years) from 33 cities. This is what powers Price Comps, House Hunter, and Land Deal Finder.</p>
+ <div style="font-size:2rem;font-weight:800;color:#00E1E6;margin-bottom:0.5rem">36,000+</div>
+ <p style="color:#94a3b8;font-size:0.9rem;margin-bottom:0.75rem"><strong>Real sale prices</strong> — active listings + sold properties (past 2 years) from 77 cities. This is what powers Price Comps, House Hunter, and Land Deal Finder.</p>
  <p style="color:#64748b;font-size:0.8rem">Source: Redfin MLS • Used for: valuations</p>
  </div>
  
