Restore blog carousel

--- a/index.html
+++ b/index.html
@@ -4225,7 +4225,228 @@
         </div>
     </section>
 
-    <!-- Featured Blog Section -->
+    <section id="featured-blog" style="padding: 4rem 0; background: linear-gradient(180deg, rgba(20, 20, 35, 1) 0%, var(--bg-dark) 100%); overflow: hidden;">
+        <style>
+            .article-scroll {
+                display: flex;
+                gap: 1.5rem;
+                overflow-x: auto;
+                padding: 2rem 0 3rem;
+                scroll-snap-type: x mandatory;
+                -webkit-overflow-scrolling: touch;
+                scrollbar-width: thin;
+                scrollbar-color: var(--primary) transparent;
+            }
+            .article-scroll::-webkit-scrollbar {
+                height: 6px;
+            }
+            .article-scroll::-webkit-scrollbar-track {
+                background: rgba(255,255,255,0.05);
+                border-radius: 3px;
+            }
+            .article-scroll::-webkit-scrollbar-thumb {
+                background: var(--primary);
+                border-radius: 3px;
+            }
+            .scroll-card {
+                flex: 0 0 280px;
+                min-height: 320px;
+                background: rgba(46, 26, 71, 0.95);
+                border-radius: 16px;
+                padding: 1.75rem;
+                position: relative;
+                overflow: hidden;
+                cursor: pointer;
+                transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275), 
+                            box-shadow 0.3s ease,
+                            z-index 0s 0.4s;
+                scroll-snap-align: start;
+                text-decoration: none;
+                display: flex;
+                flex-direction: column;
+                transform-style: preserve-3d;
+                perspective: 1000px;
+            }
+            .scroll-card::before {
+                content: '';
+                position: absolute;
+                left: 0;
+                top: 0;
+                bottom: 0;
+                width: 4px;
+                background: linear-gradient(180deg, #2E1A47, #00E1E6);
+                border-radius: 16px 0 0 16px;
+                transition: width 0.3s ease;
+            }
+            .scroll-card:hover {
+                transform: translateY(-20px) scale(1.05) rotate3d(0, 1, 0, -5deg);
+                box-shadow: 0 25px 50px rgba(0, 81, 230, 0.3), 
+                            10px 10px 30px rgba(0, 225, 230, 0.15);
+                z-index: 10;
+                transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275), 
+                            box-shadow 0.3s ease,
+                            z-index 0s 0s;
+            }
+            .scroll-card:hover::before {
+                width: 6px;
+            }
+            .scroll-card .card-type {
+                font-size: 0.8rem;
+                color: var(--text-muted);
+                margin-bottom: 0.75rem;
+            }
+            .scroll-card .card-type span {
+                color: var(--text);
+                font-weight: 500;
+            }
+            .scroll-card h3 {
+                font-size: 1.15rem;
+                font-weight: 700;
+                color: var(--text);
+                line-height: 1.4;
+                margin-bottom: 1rem;
+                flex: 1;
+            }
+            .scroll-card .card-tag {
+                font-size: 0.75rem;
+                font-weight: 700;
+                text-transform: uppercase;
+                letter-spacing: 0.5px;
+                color: var(--accent);
+                margin-top: auto;
+            }
+            .scroll-header {
+                flex: 0 0 260px;
+                min-height: 320px;
+                background: linear-gradient(135deg, var(--primary) 0%, var(--accent) 100%);
+                border-radius: 16px;
+                padding: 2rem;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                scroll-snap-align: start;
+                position: relative;
+                overflow: hidden;
+            }
+            .scroll-header::before {
+                content: '';
+                position: absolute;
+                inset: 3px;
+                background: var(--bg-dark);
+                border-radius: 14px;
+            }
+            .scroll-header > * {
+                position: relative;
+                z-index: 1;
+            }
+            .scroll-header h2 {
+                font-size: 2rem;
+                font-weight: 900;
+                line-height: 1.2;
+                margin-bottom: 1.5rem;
+                background: linear-gradient(135deg, var(--primary), var(--accent));
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+            }
+            .scroll-header p {
+                color: var(--text-muted);
+                font-size: 0.9rem;
+            }
+            .scroll-header a {
+                color: var(--accent);
+                text-decoration: none;
+                font-weight: 600;
+            }
+        </style>
+        <div class="section-container">
+            <div class="article-scroll">
+                <!-- Header Card -->
+                <div class="scroll-header">
+                    <h2>Latest Articles</h2>
+                    <p>Powered by</p>
+                    <a href="blog.html">AIBridges Research →</a>
+                </div>
+
+                <!-- Card 1 - MA Settlements -->
+                <a href="blog-ma-car-accident-settlements-2026" class="scroll-card">
+                    <div class="card-type"><span>Article</span> on Feb 7, 2026</div>
+                    <h3>Average Car Accident Settlement in Massachusetts 2026</h3>
+                    <div class="card-tag">Legal Data</div>
+                </a>
+
+                <!-- Card 2 - CT Settlements -->
+                <a href="blog-ct-car-accident-settlements-2026" class="scroll-card">
+                    <div class="card-type"><span>Article</span> on Feb 7, 2026</div>
+                    <h3>Average Car Accident Settlement in Connecticut 2026</h3>
+                    <div class="card-tag">Legal Data</div>
+                </a>
+
+                <!-- Card 3 - AI Consciousness -->
+                <a href="blog-ai-agents-consciousness-moltbook" class="scroll-card">
+                    <div class="card-type"><span>Article</span> on Feb 2, 2026</div>
+                    <h3>AI Agents & Consciousness: What the Moltbook Reveals</h3>
+                    <div class="card-tag">AI Research</div>
+                </a>
+
+                <!-- Card 4 - Word Add-ins -->
+                <a href="blog-word-addins-lawyers" class="scroll-card">
+                    <div class="card-type"><span>Guide</span> on Jan 28, 2026</div>
+                    <h3>Word Add-ins for Lawyers: The Complete 2026 Guide</h3>
+                    <div class="card-tag">Legal Tech</div>
+                </a>
+
+                <!-- Card 5 - Document Automation -->
+                <a href="blog-legal-document-automation-2025" class="scroll-card">
+                    <div class="card-type"><span>Guide</span> on Jan 15, 2026</div>
+                    <h3>Legal Document Automation: 2025 Best Practices</h3>
+                    <div class="card-tag">Automation</div>
+                </a>
+
+                <!-- Card 6 - Small Business AI -->
+                <a href="blog-small-business-ai-guide" class="scroll-card">
+                    <div class="card-type"><span>Guide</span> on Jan 10, 2026</div>
+                    <h3>AI for Small Business: A Practical Implementation Guide</h3>
+                    <div class="card-tag">AI Strategy</div>
+                </a>
+
+                <!-- Card 7 - OneDrive Troubleshooting -->
+                <a href="blog-disk-space-onedrive-troubleshooting" class="scroll-card">
+                    <div class="card-type"><span>Tutorial</span> on Jan 5, 2026</div>
+                    <h3>OneDrive Disk Space Issues: The Complete Fix</h3>
+                    <div class="card-tag">IT Support</div>
+                </a>
+
+                <!-- Card 8 - IT Support RI -->
+                <a href="blog-it-support-rhode-island" class="scroll-card">
+                    <div class="card-type"><span>Article</span> on Dec 20, 2025</div>
+                    <h3>IT Support in Rhode Island: What Businesses Need in 2026</h3>
+                    <div class="card-tag">Local</div>
+                </a>
+
+                <!-- Card 9 - StaffSync -->
+                <a href="blog-staffsync-free-restaurant-scheduler" class="scroll-card">
+                    <div class="card-type"><span>Product</span> on Dec 15, 2025</div>
+                    <h3>StaffSync: Free Restaurant Staff Scheduling</h3>
+                    <div class="card-tag">Tools</div>
+                </a>
+
+                <!-- Card 10 - Shift Trading -->
+                <a href="blog-shift-trading-restaurant-staff" class="scroll-card">
+                    <div class="card-type"><span>Article</span> on Dec 10, 2025</div>
+                    <h3>Shift Trading for Restaurant Staff: Best Practices</h3>
+                    <div class="card-tag">Operations</div>
+                </a>
+
+                <!-- Card 11 - Sanctus Partnership -->
+                <a href="blog-sanctus-partnership-catholic-couples-app" class="scroll-card">
+                    <div class="card-type"><span>News</span> on Dec 1, 2025</div>
+                    <h3>Sanctus Partnership: Building the Catholic Couples App</h3>
+                    <div class="card-tag">Partnership</div>
+                </a>
+            </div>
+        </div>
+    </section>
+
     <!-- CTA Section -->
     <section id="contact" class="cta-section">
         <div class="section-container">
