Simplify services: show only 3 core AI services, link to full list

--- a/index.html
+++ b/index.html
@@ -3922,7 +3922,7 @@
                 <p class="section-subtitle">AI integrations, cloud infrastructure, custom development, and ongoing support — your complete technology partner.</p>
             </div>
 
-            <div class="more-services-grid">
+            <div class="more-services-grid" style="grid-template-columns: repeat(3, 1fr);">
                 <a href="service-ai.html" class="mini-service popular reveal" style="text-decoration: none; color: inherit;">
                     <h4>🎯 Agent Discovery & Strategy</h4>
                     <p>Audit workflows, identify where AI agents save time and money</p>
@@ -3940,42 +3940,12 @@
                     <p>Agents run 24/7 with monitoring, monthly improvements, and cost caps</p>
                     <span class="price">From $1,500/mo</span>
                 </a>
+            </div>
 
-                <div class="mini-service popular reveal">
-                    <h4>🎓 Team Training & Handoff</h4>
-                    <p>Prompt engineering, workflow management, and escalation training</p>
-                    <span class="price">$500/session</span>
-                </div>
-
-                <a href="service-aws.html" class="mini-service reveal" style="text-decoration: none; color: inherit;">
-                    <h4>☁️ AWS Cloud Services</h4>
-                    <p>Hosting, backups, disaster recovery on AWS</p>
-                    <span class="price">From $49/mo</span>
+            <div style="text-align: center; margin-top: 2rem;">
+                <a href="services.html" style="color: var(--text-muted); text-decoration: none; font-size: 0.95rem; padding: 0.75rem 1.5rem; border: 1px solid var(--border); border-radius: 8px; display: inline-block; transition: all 0.3s ease;" onmouseover="this.style.color='var(--text)';this.style.borderColor='var(--primary)';this.style.background='rgba(76,105,245,0.1)'" onmouseout="this.style.color='var(--text-muted)';this.style.borderColor='var(--border)';this.style.background='transparent'">
+                    View all services (AWS, IT Support, App Development & more) →
                 </a>
-
-                <div class="mini-service reveal">
-                    <h4>Custom SaaS & App Development</h4>
-                    <p>Full-stack web applications tailored to your business</p>
-                    <span class="price">Starting $3,500</span>
-                </div>
-
-                <div class="mini-service reveal">
-                    <h4>Mobile App Development</h4>
-                    <p>iOS and Android apps for your customers</p>
-                    <span class="price">Starting $2,500</span>
-                </div>
-
-                <div class="mini-service reveal">
-                    <h4>IT Support & Helpdesk</h4>
-                    <p>Responsive technical support when you need it</p>
-                    <span class="price">$75/hr or $500/mo</span>
-                </div>
-
-                <div class="mini-service reveal">
-                    <h4>Business Automation</h4>
-                    <p>Streamline repetitive tasks and workflows</p>
-                    <span class="price">Starting $500</span>
-                </div>
             </div>
         </div>
     </section>
